# Internship

./: .gitignore  README.md  prompt_patterns.md
Capstone/: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  Dockerfile  PROJECT_DOCUMENTATION.md  README.md  SYSTEM_FLOWS.md  clean.bat  docker-compose.yml  requirements.txt  run.bat
Capstone/backend/: answer_policy.py  cache_db.py  observability.py  openai_compat.py  semantic_cache.py  settings.py
Capstone/backend/researcher_crew/: README.md  pyproject.toml
Capstone/backend/researcher_crew/src/researcher_crew/: crew.py  main.py
Capstone/backend/researcher_crew/src/researcher_crew/config/: agents.yaml  tasks.yaml
Capstone/backend/researcher_crew/src/researcher_crew/tools/: __init__.py  custom_tool.py
Capstone/deploy/: connect-kiro-ec2.sh  update-ec2.sh
Capstone/docs/: ALUR_SEMANTIC_CACHE.md  ARCHITECTURE.md  BACKEND_FLOW.md  SYSTEM_FLOWS.md  TOPOLOGY.md
Capstone/frontend/: app.py
Capstone/tests/: frontend_citation_layout.html  test_admin_auth.py  test_admin_logs.py  test_cache_db.py  (+15 more)
CrewAI/football_transfer_crew/: README.md  pyproject.toml
CrewAI/football_transfer_crew/data/: players.csv
CrewAI/football_transfer_crew/src/football_transfer_crew/: crew.py  main.py
CrewAI/football_transfer_crew/src/football_transfer_crew/config/: agents.yaml  tasks.yaml
CrewAI/football_transfer_crew/src/football_transfer_crew/tools/: __init__.py  playersearch.py
HelloWorld/: HelloWorld.js  HelloWorld.py
SimpleChatService/: app.js  package.json
SimpleRAG/: requirements.txt
(+79 files in other folders)
