[project]
name = "football_transfer_crew"
version = "0.1.0"
description = "football_transfer_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
football_transfer_crew = "football_transfer_crew.main:run"
run_crew = "football_transfer_crew.main:run"
train = "football_transfer_crew.main:train"
replay = "football_transfer_crew.main:replay"
test = "football_transfer_crew.main:test"
run_with_trigger = "football_transfer_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
