[project]
name = "researcher_crew"
version = "0.1.0"
description = "researcher_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
researcher_crew = "researcher_crew.main:run"
run_crew = "researcher_crew.main:run"
train = "researcher_crew.main:train"
replay = "researcher_crew.main:replay"
test = "researcher_crew.main:test"
run_with_trigger = "researcher_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
